OO-9146: open access to all participants for LTI